kqed/src/objects/Stock__c.object
<CustomObject>
    <fields>
        <fullName>Average__c</fullName>
        <formula>( High__c + Low__c )/2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Giving__c</fullName>
        <label>Giving</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Stocks</relationshipLabel>
        <relationshipName>Stocks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>High__c</fullName>
        <label>High</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Low__c</fullName>
        <label>Low</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Shares__c</fullName>
        <label>Number of Shares</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ticker_Symbol__c</fullName>
        <label>Ticker Symbol</label>
        <referenceTo>Ticker_Symbol__c</referenceTo>
        <relationshipLabel>Stocks</relationshipLabel>
        <relationshipName>Stocks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Stock</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000000000}</displayFormat>
        <label>Stock #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>